syntax = "proto3";

package com.metrocarpool.events;

// Optionally define the Java package
option java_multiple_files = true;
option java_package = "com.metrocarpool.contracts.proto";
option java_outer_classname = "RiderRequestDriverEventMessage";

// The Kafka event definition
message RiderRequestDriverEvent {
  int64 riderId = 1;
  string pickUpStation = 2;
  string arrivalTime = 3;
  string destinationPlace = 4;
}
